silence of the lambs overflow fix

--- a/client/src/components/modules/SingleReview.css
+++ b/client/src/components/modules/SingleReview.css
@@ -4,11 +4,14 @@
     border-radius: 32px;
     background-color: var(--cream);
     width: 580px;
-    max-height: 600px;
+    max-height: max-content;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3%;
     padding-bottom:10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .Poster-img {
